# qmt-agent-trader

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: task-3-report.md  task-5-report.md  task-6a-report.md  task-6b-report.md  task-7-report.md
configs/: app.yaml  backtest.yaml  broker.remote.yaml  data.yaml  gateway.windows.yaml  llm.deepseek.yaml  mcp.servers.example.json  risk.yaml
docs/: data_fundamentals_macro.md  storage_operations.md  tushare_endpoint_inventory.md  tushare_usage_ledger.md
docs/architecture/: adr-artifact-store.md  adr-control-store.md  chat_run_lifecycle.md  persistence_inventory.md  persistence_simplification_review.md
docs/backtest/: factor-rank-adapter.md
docs/superpowers/plans/: 2026-07-13-factor-rank-backtest-correctness.md  2026-07-13-storage-preserve-raw-reset.md  2026-07-14-factor-rank-backtest-factor-universe-repairs.md  2026-07-14-factor-rank-backtest-final-blockers.md  (+6 more)
gateway/windows_qmt_gateway/: .env.example  README.md  pyproject.toml
gateway/windows_qmt_gateway/scripts/: qmt_smoke_test.py  run_gateway.ps1
gateway/windows_qmt_gateway/src/qmt_gateway/: __init__.py  app.py  audit.py  auth.py  config.py  qmt_adapter.py  risk.py  schemas.py  xtquant_loader.py
gateway/windows_qmt_gateway/src/qmt_gateway/routes/: __init__.py  account.py  market.py  orders.py  stream.py
scripts/: bootstrap_data.py  diagnose_factor_rank_report.py  profile_research_tools.py  run_agent_research.py  run_backtest.py
src/qmt_agent_trader/: __init__.py
tests/: conftest.py
tests/integration/: test_factor_rank_backtest_correctness.py
tests/unit/: test_agent_permissions.py  test_agent_runtime.py  test_approval.py  test_backtest_constraints.py  test_backtest_service.py  test_cli_agent.py  test_cli_storage.py  test_cli_todo_render.py  test_cli_trade.py  test_cli_tui.py  test_config.py  test_data_bars.py  test_data_update_fundamentals.py  test_data_update_macro.py  test_data_update_service.py  test_factor_registry.py  test_factor_service.py  test_fundamentals_pit.py  test_gateway_auth.py  test_llm_client.py  test_llm_normalization.py  test_macro_pit.py  test_order_plan.py  test_point_in_time.py  test_profile_research_tools.py  test_research_report_service.py  test_research_runner.py  test_security.py  test_sensitivity.py  test_storage.py  test_strategy_diagnostics.py  test_strategy_examples.py  test_strategy_loader.py  test_strategy_models.py  test_strategy_order_plan_adapter.py  test_strategy_portfolio.py  test_strategy_registry.py  test_strategy_validation.py  test_tushare_client.py  test_tushare_client_fundamentals.py
(+350 files in other folders)
