[project]
name = "qmt-agent-trader"
version = "0.1.0"
description = "Mac-controlled QMT agent trader with a Windows-only QMT gateway."
readme = "README.md"
authors = [
    { name = "huangyicong0769", email = "mcrspsht@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.4",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "hypothesis>=6.141.1",
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "nicegui>=3.13.0",
    "numpy>=2.0.2",
    "openai>=2.41.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pre-commit>=4.3.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=15.0.0",
    "ruff>=0.15.16",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "socksio>=1.0.0",
    "sqlalchemy>=2.0.50",
    "sse-starlette>=3.4.5",
    "statsmodels>=0.14.6",
    "tenacity>=9.1.2",
    "textual>=8.2.7",
    "tqdm>=4.68.2",
    "tushare>=1.4.29",
    "typer>=0.23.2",
    "uvicorn>=0.39.0",
    "websockets>=15.0.1",
]

[project.scripts]
qmt-agent = "qmt_agent_trader.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qmt_agent_trader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/qmt_agent_trader/agent/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008", "RUF001"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["src/qmt_agent_trader/agent/generated"]

[[tool.mypy.overrides]]
module = ["duckdb", "pandas", "tushare", "yaml"]
ignore_missing_imports = true
