[project]
name = "qmt-gateway"
version = "0.1.0"
description = "Windows-only QMT gateway for qmt-agent-trader."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.8",
    "uvicorn>=0.39.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
    "typer>=0.23.2",
    "pytest>=8.4.2",
    "ruff>=0.15.16",
    "mypy>=1.19.1",
]

[project.scripts]
qmt-gateway = "qmt_gateway.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qmt_gateway"]
